--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,35 @@
 {
   "version": 2,
-  "builds": [
+  "routes": [
     {
-      "src": "vite.config.js",
-      "use": "@vitejs/plugin-vue",
-      "config": {
-        "distDir": "dist"
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html",
+      "headers": {
+        "Cache-Control": "no-cache"
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/.*",
+      "src": "/(.*)",
       "dest": "/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
